// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input checkbox renders correctly 1`] = `
<Fragment>
  <Checkbox
    id="exampleID"
    labelText="None Provided"
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input radio renders correctly 1`] = `
<Fragment>
  <RadioButton
    id="exampleID"
    labelText="None Provided"
    onBlur={[Function]}
    onChange={[Function]}
    value={true}
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input select renders correctly when disabled is true 1`] = `
<Fragment>
  <Select
    defaultValue=""
    disabled={true}
    error={false}
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input select renders correctly when type is select 1`] = `
<Fragment>
  <Select
    defaultValue=""
    error={false}
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input textArea renders correctly 1`] = `
<Fragment>
  <TextArea
    defaultValue=""
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input textArea renders correctly when disabled is true 1`] = `
<Fragment>
  <TextArea
    defaultValue=""
    disabled={true}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input textArea renders correctly when type is textArea 1`] = `
<Fragment>
  <TextArea
    defaultValue=""
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when disabled is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    disabled={true}
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when error prop is true renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={true}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when idForLabel prop is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id="exampleID"
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when infoText prop is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when placeholder prop is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Example Text"
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when required is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when type is password renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="password"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when validate is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;

exports[`Input when value prop is passed in renders correctly 1`] = `
<Fragment>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</Fragment>
`;
